# Teller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TellerEngine.sln
ConsoleTest/: ConsoleTest.cpp  ConsoleTest.vcxproj  ConsoleTest.vcxproj.filters
ConsoleTest/x64/Debug/: ConsoleTest.exe.recipe
TellerEditor/: TellerEditor.cpp  TellerEditor.h  TellerEditor.qrc  TellerEditor.ui  TellerEditor.vcxproj  TellerEditor.vcxproj.filters  main.cpp
TellerEngine/: Agent.cpp  Agent.h  Animation.cpp  Animation.h  Asset.cpp  Asset.h  Audio.h  ClassDiagram.cd  Cmakelists.txt  Core.cpp  Core.h  Editor.cpp  Editor.h  EditorManager.cpp  EditorManager.h  Episode.cpp  Episode.h  Game.cpp  Game.h  Image.h  InGameUI.h  NodeEditor.cpp  NodeEditor.h  Renderer.h  Scene.cpp  Scene.h  Sprite.h  TellerEngine.vcxproj  TellerEngine.vcxproj.filters  TellerEvent.cpp  Tree.cpp  Tree.h  imgui.ini  main.cpp  pch.h
TellerEngine/src/: Agent.cpp  Agent.h  Animation.cpp  Animation.h  Asset.cpp  Asset.h  ContentManager.cpp  ContentManager.h  Core.cpp  Core.h  Editor.cpp  Editor.h  Episode.cpp  Episode.h  EventInstance.h  Game.cpp  Game.h  Image.h  InGameUI.h  ModuleCore.cpp  ModuleCore.h  NodeEditor.cpp  NodeEditor.h  NodeLink.h  Scene.cpp  Scene.h  Sprite.h  TellerCore.cpp  TellerCore.h  TellerEvent.h  ThreadPool.h  Tree.cpp  Tree.h  UIBase.cpp  UIBase.h  Variant.h  main.cpp  utility.h
TellerEngine/x64/Debug/: Agent.nativecodeanalysis.sarif  Animation.nativecodeanalysis.sarif  Asset.nativecodeanalysis.sarif  Audio.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  Core.nativecodeanalysis.sarif  Editor.nativecodeanalysis.sarif  Episode.nativecodeanalysis.sarif  Game.nativecodeanalysis.sarif  InGameUI.nativecodeanalysis.sarif  NodeEditor.nativecodeanalysis.sarif  Renderer.nativecodeanalysis.sarif  Scene.nativecodeanalysis.sarif  StoryBoard.nativecodeanalysis.sarif  TellerCore.nativecodeanalysis.sarif  TellerEngine.exe.recipe  TellerEvent.nativecodeanalysis.sarif  Tree.nativecodeanalysis.sarif  UIBase.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  vc143.idb
TellerEngine/x64/Debug/TellerEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TellerEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TellerEngine/x64/Debug/TellerEngineCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TellerEngineCore.lastbuildstate
TellerEngine/x64/Debug_Intel/TellerEngine.tlog/: TellerEngine.lastbuildstate  icx-clang-cl.10996.delete.1.tlog  icx-clang-cl.11700.delete.1.tlog  icx-clang-cl.13420.delete.1.tlog  icx-clang-cl.14512.delete.1.tlog  icx-clang-cl.14928.delete.1.tlog  icx-clang-cl.18976.delete.1.tlog  icx-clang-cl.2080.delete.1.tlog  icx-clang-cl.20904.delete.1.tlog  icx-clang-cl.22068.delete.1.tlog  icx-clang-cl.22412.delete.1.tlog  icx-clang-cl.22424.delete.1.tlog  icx-clang-cl.22568.delete.1.tlog  icx-clang-cl.23296.delete.1.tlog  icx-clang-cl.23480.delete.1.tlog  icx-clang-cl.5032.delete.1.tlog  icx-clang-cl.6768.delete.1.tlog  icx-clang-cl.9636.delete.1.tlog  icx.command.1.tlog  icx.read.1.tlog  (+2 more)
TellerEngine/x64/Release/: TellerEngine.exe.recipe
TestTMessanger/: TestTMessanger.vcxproj  test.cpp
TestTMessanger/x64/Debug/: TestTMessanger.exe.recipe  TestTMessanger.vcxproj.FileListAbsolute.txt
docs/: TellerEngineDocument.tex
docs/teishutu/: concept.tex
glew/: glew.pc
glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
glfw/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  triangle-vulkan.vcxproj  triangle-vulkan.vcxproj.filters  (+2 more)
include/: Agent.h  Asset.h  Core.h  Editor.h  Episode.h  EventInstance.h  Game.h  InGameUI.h  NodeEditor.h  NodeEditorPrivate.h  Scene.h  TAgent.h  TAlias.h  TAnimator.h  TellerCore.h  TellerEvent.h  ThreadPool.h  Tree.h  Variant.h  japaneseGryph.h
nazo/: main.cpp  nazo.vcxproj
plantuml/: classdiagram.pu  editor.pu  layout.pu
sample/: NazoHanashi.csv  imgui.ini
src/: Agent.cpp  Animation.cpp  CMakeLists.txt  Editor.cpp  Episode.cpp  EventInstance.cpp  Game.cpp  Scene.cpp  TAgent.cpp  TAnimator.cpp  TellerCore.cpp  TellerEvent.cpp  Variant.cpp  main.cpp
x64/: sequenceフォーマット.json
x64/Debug/: imgui.ini  test.xml  偽物の話＿改稿.docx
x64/Debug/episodes/: episode - コピー.csv  episode.csv  episode0201.csv
x64/Release/: imgui.ini
x64/data/: sequence.json
x64/data/csvdata/: NazoHanashi.csv  story.csv
x64/data/episodes/: FUUU.csv  FUUU.json  fffffffff.csv  fffffffff.json  fullstory.csv  fullstory.json  fuuuuuuuu.csv  fuuuuuuuu.json  nan.csv  nan.json  sdffsdsdf.csv  ya.csv  ya.json
(+27 files in other folders)
